tests/invalid/open_keyword_arg/main.py
if __name__ == "__main__":
    data: str = open(path="tests/basic/call_paths_data.txt")
